--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.17.1",
+    "@supabase/supabase-js": "^2.55.0",
     "@types/node": "^22.15.17",
     "firebase": "^10.14.1",
     "html-parse-stringify": "^3.0.1",
@@ -27,7 +28,6 @@
     "void-elements": "^3.1.0"
   },
   "devDependencies": {
-    "@types/firebase": "^2.4.32",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
